reorganization of code

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet">
+    <script src="globals.js"></script>
     <script src='TweenMax.min.js'></script>
     <script src="matter.min.js"></script>
     <script src="code.js"></script>
     <script src="keys.js"></script>
     <script src="console.js"></script>
+    <script src="stats.min.js"></script>
+    <script src="stats.js"></script>
   </head>
   
   <body>
